# ei_xml_to_db

./: .gitignore  pyproject.toml
ei/: add_data.py  sqalm.py
